--- a/callboard/templates/default.html
+++ b/callboard/templates/default.html
@@ -8,8 +8,9 @@
     <link href={% static "css/bulma.min.css" %} rel="stylesheet" >
   <link rel="stylesheet" href="https://bulma.io/vendor/fontawesome-free-5.15.2-web/css/all.min.css">
 </head>
-<body>
-    <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+<body class="has-navbar-fixed-top">
+
+  <nav class="navbar is-fixed-top is-dark" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
       <img src={% static "announcement.png" %} height="80" style="padding-right: 1em;">
