--- a/callboard/templates/app/list.html
+++ b/callboard/templates/app/list.html
@@ -2,42 +2,35 @@
 {% load static %}
 
 {% block content %}
-{% for post in posts %}
-  <div class="box" style="cursor: pointer" onclick='window.location.assign("post/{{ post.pk }}")'>
+{% for post in data %}
+  <div class="box" style="cursor: pointer" onclick='window.location.assign("post/{{ post.pk }}/detail")'>
   <article class="media">
     <div class="media-left">
       <figure class="image is-64x64">
         <img src={% static "announcement.png" %} alt="Image">
-      </figure>
+      </figure>      
     </div>
-    <div class="media-content">
+    <div class="media-content">    
       <div class="content">
         <p>
           <small class="has-text-info">{{ post.date_update|date:'d.m.Y' }}</small>
           <strong>{{ post.title|truncatewords:20}}</strong>
           <br>
-          {{ post.pk }} {{ post.content|striptags|truncatewords:20}}
+          {{ post.content|striptags|truncatewords:20}}
         </p>
       </div>
-      <nav class="level is-mobile">
-        <div class="level-left">
-          <a class="level-item" aria-label="reply">
-            <span class="icon is-small">
-              <i class="fas fa-reply" aria-hidden="true"></i>
-            </span>
-          </a>
-          <a class="level-item" aria-label="retweet">
-            <span class="icon is-small">
-              <i class="fas fa-retweet" aria-hidden="true"></i>
-            </span>
-          </a>
-          <a class="level-item" aria-label="like">
-            <span class="icon is-small">
-              <i class="fas fa-heart" aria-hidden="true"></i>
-            </span>
-          </a>
-        </div>
-      </nav>
+      <span class="icon-text has-text-info">
+          <span class="icon">
+            <i class="fas fa-comment"></i>
+          </span>
+          <span>{{post.recalls.count}}</span>
+        </span>
+    </div>
+    <div class="media-right">
+      <span class="icon is-small">
+              <i class="fas fa-user" aria-hidden="true"></i>
+      </span>
+        <span class="is-info">{{post.user}}</span>
     </div>
   </article>
 </div>
@@ -46,7 +39,7 @@
 
 
 
-<nav class="pagination is-centered" role="navigation" aria-label="pagination">
+<nav class="pagination is-fixed-bottom is-centered" role="navigation" aria-label="pagination">
   <!--<a class="pagination-previous">Previous</a>
   <a class="pagination-next">Next page</a>-->
   <ul class="pagination-list">
