--- a/callboard/templates/default.html
+++ b/callboard/templates/default.html
@@ -41,6 +41,9 @@
             <a class="navbar-item" href="/my">
               Мои объявления
             </a>
+            <a class="navbar-item" href="/recall-new">
+              Мои объявления с ответами
+            </a>
             <a class="navbar-item" href="/recall">
               Мои ответы
             </a>
